# py-airspeed

./: .gitignore  AERO.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src-rust/src/: airspeed.rs  errors.rs  isa.rs  lib.rs  solver.rs  temperature.rs  types.rs
src/airspeed/: __init__.py  _core.pyi  _result.py  errors.py  temperature.py
tests/: test_cas.py  test_errors.py  test_mach.py  test_tas.py
