[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "airspeed"
version = "0.1.0"
requires-python = ">=3.12"
description = "CAS / Mach / TAS bidirectional conversions with ISA atmosphere and temperature sensors"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Pierre-Selim Huard", email = "pierre-selim@huard.info" }]
keywords = ["aviation", "airspeed", "CAS", "TAS", "Mach", "ISA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[tool.maturin]
python-source = "src"
module-name = "airspeed._core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
